# keysniff

./: .clang-format  .clangd  .gitignore  Dockerfile  TODO.md  build.ps1  build.sh  build_linux.sh  build_windows.sh  compile.sh  cross_clang.txt  main.c  meson.build  system_requirements.txt
include/: config.h  input.h  network.h  utils.h
server/: Dockerfile  compose.yml
server/go_log_server/: main.go
src/: input.c  main.c  network.c  utils.c
